Revert "HW-29: code refactoring according to SOLID"
This reverts commit 2f2981b101d5fffae774079cf6a701b4360c03c3.